myteo/test/analyze/type_check/assignment.myte
module Test

fun main() {
  val x: int = 1;
  x = 2;
  x = 3;
  x = ();
}